Bug 439077 – Anchor tags with no attributes should not expose linked accessible state, r=MarcoZ